# Playwright-MCP-Recording

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  example-recording.json  example_usage.py  mcp-config.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test_setup.py
config/: README.md  locators.ts  page-objects.ts  run.txt  test-config.ts  test-helpers.ts
config/cmg-cm/: README.md  locators.ts  page-objects.ts  test-config.ts  test-helpers.ts
config/cmg-dm/: README.md  locators.ts  page-objects.ts  test-config.ts  test-helpers.ts
src/: __init__.py  config.py  index.ts  server.py
src/services/: __init__.py  browser.py
tests/: advanced-search.spec.ts  delete-organization.spec.ts  keyword-create-search-delete.spec.ts  new-organization-ceation.spec.ts  new-users-creation.spec.ts  newly-created-org-search.spec.ts  users-search.spec.ts  users-update.spec.ts
tests/cmg-cm/: CMG-CM-login.spec.ts  CMG-CM-systemParameter.spec.ts  test-1.spec.ts
tests/cmg-dm/: advanced-search.spec.ts  delete-organization.spec.ts  keyword-create-search-delete.spec.ts  new-organization-ceation.spec.ts  new-users-creation.spec.ts  newly-created-org-search.spec.ts  users-search.spec.ts  users-update.spec.ts
